--- a/leeloo-cloud/functions/package.json
+++ b/leeloo-cloud/functions/package.json
@@ -13,6 +13,9 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
