08_changed navigation to responsive

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,34 @@
 {
-  "git.ignoreLimitWarning": true,
-  
-  "workbench.colorCustomizations": {
-    "editorCursor.foreground": "#C6AB53",
-    "terminalCursor.foreground": "#6F2560"
+  "eslint.alwaysShowStatus": true,
+  "eslint.format.enable": true,
+  "eslint.options": {
+    "configFile": "/Users/yuriidrahomaretskyi/eduweb/typescript/.eslintrc.js"
   },
-
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "editor.formatOnSave": true,
+  "eslint.validate": ["javascript", "typescript"],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
 
+  "git.ignoreLimitWarning": true,
+
+  "workbench.colorCustomizations": {
+    "editorCursor.foreground": "#C6AB53",
+    "terminalCursor.foreground": "#C6AB53"
+  },
+  "workbench.activityBar.visible": false,
+  "workbench.statusBar.visible": false,
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.action.quickOpen": true,
+  "window.zoomLevel": 0.1,
+  "editor.fontSize": 18,
+  "terminal.integrated.fontSize": 18,
+  "breadcrumbs.enabled": true,
+  "editor.fontFamily": "'Fire Code', monospace",
+  "editor.fontLigatures": false,
+  "editor.wordWrap": "on"
 }
