--- a/leeloo-website/package.json
+++ b/leeloo-website/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-styled-components": "^3.5.0",
+    "gatsby-source-cloudinary": "^0.1.14",
     "gatsby-source-datocms": "^2.5.7",
     "gatsby-source-filesystem": "^2.6.0",
     "gatsby-source-google-photos": "^2.4.2",
